--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "mad-releaser",
   "version": "0.1.0",
   "description": "CLI util to release your code",
-  "main": "index.ts",
+  "main": "lib/index.js",
+  "types": "lib/index.d.ts",
   "scripts": {
     "build": "tsc",
     "lint": "eslint **/*.ts",
@@ -38,10 +39,12 @@
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-n": "^15.2.5",
     "eslint-plugin-promise": "^6.0.1",
+    "nodemon": "^2.0.19",
     "typescript": "^4.7.4"
   },
   "dependencies": {
     "inquirer": "^9.1.0",
-    "shelljs": "^0.8.5"
+    "shelljs": "^0.8.5",
+    "simple-git": "^3.13.0"
   }
 }
